--- a/README.org
+++ b/README.org
@@ -11,19 +11,26 @@
   
 ** Instructions (For Mac, Homebrew instructions only)
 
-  1. I install Emacs via homebrew (with cacao so it will link, then link it), so
-     that cask downloads packages for only one version of emacs
-  2. Download and install Cask via homebrew
-  3. Add cask to your $PATH so that emacs can find the packages
-     - Find out where cask is installed
-       #+BEGIN_SRC shell-script
-         brew info cask
-       #+END_SRC
-     - Copy the filepath and append it to $PATH
-       #+BEGIN_SRC shell-script
-         export PATH="path/to/cask/:$PATH"
-       #+END_SRC
-  4. While emacs is closed, cd into the .emacs.d/ page and run cask. This will
-     install all the packages in the .cask/ directory
-  5. If this doesn't work, you may need to change the path to the cask.el file
-     as specified in init.org under the heading Cask & Packages
+   1. I install Emacs via homebrew (with cacao so it will link, then
+      link it), so that cask downloads packages for only one version
+      of emacs
+   2. Download and install Cask via homebrew
+   3. Add cask to your $PATH so that emacs can find the packages
+      - Find out where cask is installed
+	#+BEGIN_SRC shell-script
+          brew info cask
+	#+END_SRC
+      - Copy the filepath and append it to $PATH
+	#+BEGIN_SRC shell-script
+          export PATH="path/to/cask/:$PATH"
+	#+END_SRC
+   4. While emacs is closed, cd into the .emacs.d/ page and run
+      cask. This will install all the packages in the .cask/ directory
+   5. If this doesn't work, you may need to change the path to the
+      cask.el file as specified in init.org under the heading Cask &
+      Packages
+   6. Copy emacs from cask to /Applications/ so that Spotlight can
+      find it.
+	#+BEGIN_SRC shell
+          cp -r /usr/local/Cellar/emacs/25.2/Emacs.app /Applications/
+	#+END_SRC
