Add hl-line-mode hook for Org Agenda
Makes it a lot easier to follow and looks nice.

--- a/init.org
+++ b/init.org
@@ -408,6 +408,9 @@
      (tags . "  %-12:c")
      (search . "  %-12:c")))
 
+  ;; Highlight Line Mode in Emacs
+  (add-hook 'org-finalize-agenda-hook 'hl-line-mode)
+
 
   ;; ------------------------------------------------------------------------------
   ;; Schedule & Deadline Prefixes
