--- a/init.org
+++ b/init.org
@@ -501,6 +501,10 @@
 #+END_SRC    
 *** Clocking
 #+BEGIN_SRC emacs-lisp
+  (setq org-log-done 'time)
+  (setq org-log-done 'note)
+
+
   (setq org-clock-persist 'history)
   (org-clock-persistence-insinuate)
 #+END_SRC    
