--- a/init.org
+++ b/init.org
@@ -158,6 +158,11 @@
   (autoload 'idomenu "idomenu" nil t)
   (global-set-key (kbd "M-i") 'ido-goto-symbol) 
 #+END_SRC
+
+*** Goto Line
+#+BEGIN_SRC emacs-lisp
+  (global-set-key (kbd "M-g") 'goto-line) 
+#+END_SRC
 ** Customizations File
 
 #+BEGIN_SRC emacs-lisp 
@@ -177,6 +182,7 @@
 
 ** IRC
 *** ERC								      :fixme:
+    On startup
 #+BEGIN_SRC emacs-lisp 
 
   ;; ------------------------------------------------------------------------------
@@ -410,6 +416,7 @@
 
   ;; Highlight Line Mode in Emacs
   (add-hook 'org-finalize-agenda-hook 'hl-line-mode)
+  (add-hook 'org-finalize-agenda-hook 'linum-mode)
 
 
   ;; ------------------------------------------------------------------------------
@@ -1140,7 +1147,7 @@ Do not ask before evaluating code blocks.
 
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "M-x") 'smex)
-  (setq smex-save-file "~/.emacs.d/smex-items")
+  (setq smex-save-file "~/.emacs.d/machine-specific/smex-items")
 #+END_SRC
 
 *** Tea Time
