Set Autofill mode to C-c q

--- a/init.org
+++ b/init.org
@@ -706,6 +706,8 @@ Do not ask before evaluating code blocks.
 ** Fill Column
 #+BEGIN_SRC emacs-lisp
   (setq fill-column 79)
+
+  (global-set-key (kbd "C-c q") 'auto-fill-mode)
 #+END_SRC
 
 ** Defuns
