--- a/TODO.org
+++ b/TODO.org
@@ -1,9 +1,22 @@
 
-* TODO Setup BBDB
-* TODO Configure Eclim
-* TODO Configure Elpy
-* TODO Configure Gnus
-* TODO Configure M4ue
+* BBDB
+** TODO Initial BBDB Setup
+* Eclim
+** Hello-World in Eclim
+* Elpy
+** TODO Install/Link packages not listed in 'elpy-config   
+   Jedi..............: Not found (0.10.2 available)
+   Rope..............: Not found (0.10.5 available)
+   Importmagic.......: Not found (0.1.7 available)
+   Autopep8..........: Not found (1.3.2 available)
+   Yapf..............: Not found (0.16.3 available)
+   Syntax checker....: Not found (flake8)
+* Gnus (Wiegley Style)
+** Setup Fetchmail for Gmail
+** Gnus read email from Dovecot
+* M4ue
+** TODO Read Email
+* ERC
 * Investigage/Bugs/Annoyances
 ** Error: Magit cannot determine a suitable emacs client
 ** 'use-package
