--- a/init.org
+++ b/init.org
@@ -495,8 +495,9 @@
 #+END_SRC    
 *** Clocking
 #+BEGIN_SRC emacs-lisp
+  ;; (setq org-log-done 'note)
   (setq org-log-done 'time)
-  (setq org-log-done 'note)
+
 
 
   (setq org-clock-persist 'history)
@@ -575,6 +576,11 @@
        ;; ("version=3" "mhchem" nil)
 
        ))
+
+
+  ;; https://stackoverflow.com/questions/11365739/how-to-cancel-the-hypersetup-in-0rg-mode-of-emacs
+  ;; Disable the \hypersetup first page generation
+  (setq org-latex-with-hyperref nil)
 #+END_SRC
 *** Org Code Templates (<el...etc)
 
@@ -692,7 +698,7 @@ Do not ask before evaluating code blocks.
 
 ** Fill Column
 #+BEGIN_SRC emacs-lisp
-  (setq fill-column 79)
+  (setq fill-column 80)
 
   (global-set-key (kbd "C-c q") 'auto-fill-mode)
 #+END_SRC
