--- a/TODO.org
+++ b/TODO.org
@@ -22,5 +22,14 @@
 ** 'use-package
 ** (require/provide)
 * Agenda
+* .emacs.d
+** TODO How to Hide or Move files to machine-specific/ [0/4]
+   - [ ] abbrev_defs
+   - [ ] ac-comphist.dat
+   - [ ] bookmarks
+   - [ ] org-clock-save.el
+* Dired
+** TODO Dired Colors
+** TODO hide ./ and ../
 * Elisp
 ** TODO Finish *info*'s Elisp Intro and Examples
