--- a/init.org
+++ b/init.org
@@ -625,6 +625,12 @@
      'org-babel-load-languages
      '(;; other languages
        (latex . t)
+       (sh . t)
+       (C . t)
+       (emacs-lisp . t)
+       (python . t)
+       (ocaml . t)
+       (calc . t)                         ;emacs calc
        (plantuml . t)))
 #+END_SRC
 
